# offline-server

./: Makefile.in  OFFLINE.app  OFFLINE_en.po  OFFLINE_fr.po  OFFLINE_init.php.in  OFFLINE_postmigr_2.0.0  RELEASE  configure.in  info.xml.in
Actions/: Class.DomainApi.php  Class.DomainManager.php  Class.DomainSyncApi.php  Class.DomainViewApi.php  Class.ExceptionCode.php  Class.OfflineClientBuilder.php  Interface.DomainHook.php  admin.js  admin.php  admin.xml  familyBinding.xml  off_dlclient.css  off_dlclient.js  off_dlclient.php  off_dlclient.xml  off_domainapi.php  off_domains.php  off_externals.xml  off_folderListFormat.php  off_mkclient.php  off_mkclient.xml  off_organizer.js  off_organizer.php  off_organizer.xml  off_popupdocfolder.php  off_popuplistfolder.php  off_update.php  testHook.php
Admin/: Makefile.in  OFFLINE_ADMIN.app  OFFLINE_ADMIN_init.php.in  info.xml.in
Admin/Actions/: admin.css  admin.php  admin.xml
Families/: ACCESS.csv  Class.OfflineDomain.php  Class.OfflineFolder.php  Class.OfflineGlobalFolder.php  DATA_PROFIL.csv  Makefile  Method.OfflineDomain.php  Method.OfflineFolder.php  Method.OfflineGlobalFolder.php  OFFLINEDOMAIN_PARAM.csv  OFFLINEDOMAIN_STRUCT.csv  OFFLINEFOLDER_PARAM.csv  OFFLINEFOLDER_STRUCT.csv  OFFLINEGLOBALFOLDER_PARAM.csv  OFFLINEGLOBALFOLDER_STRUCT.csv  offlineFamilies.ods  offlineProfils.ods
Families/Views/: Makefile  syncreport.html
Images/: Makefile
Lib/: Makefile  offline-core.js  offline-domain.js  offline-sync.js  offline-view.js
locale/: Makefile
locale/en/: Makefile  OFFLINE.po  OFFLINE_en.po
locale/fr/: Makefile  OFFLINE_fr.po
patches/: Makefile  ckeditor_wsc_document_domain.patch
targets/: Makefile  common.sh
targets/linux/: Makefile
targets/linux/i686/: Makefile  build.sh
targets/linux/x86_64/: Makefile  build.sh
targets/mac/: Makefile
targets/mac/universal/: Makefile  build.sh
targets/mac/universal/Dynacase Offline.app.template/Contents/: Info.plist.in
targets/mac/universal/Dynacase Offline.app.template/Contents/Resources/: app_icon.icns
targets/update-packaging/: Makefile  createprecomplete.py  make_full_update.sh  mar  mbsdiff
targets/win/: Makefile
targets/win/32/: Makefile  build.nsi  build.nsi.in  build.sh
targets/win/32/l10n/: Makefile  en_US.nsh  fr.nsh
targets/win/32_zip/: Makefile  build.sh
